Add and remove terminology mappings